# demeter-recipes

./: README.md  pyproject.toml
demeter_recipes/: __init__.py  gui.py  text_extraction_test.py
